# chatterbox

./: .gitignore  Makefile  README.md  brat_example.py  chatterbox.py  friend_example.py  pyproject.toml  summarizer_example.py  test_installation.sh
chatterbox/: ChatterBox.py  __init__.py  api_wrapper.py
chatterbox/api_wrapper/: __init__.py  api_wrapper.py
chatterbox/examples/: academic_example.py  brat_example.py  friend_example.py  summarizer_example.py
src/api_wrapper/: __init__.py
src/chatterbox/: ChatterBox.py  __init__.py
src/examples/: academic_example.py  brat_example.py  friend_example.py  summarizer_example.py
